# UChat

./: .env.example  .gitignore  README.en.md  README.md  pyproject.toml
config/: app.toml  models.toml
docs/: README.md  bilibili_gateway.md  body_service.md  configuration.md  identity_admin.md  obs_bridge.md  project_structure_and_run.md  runtime.md  runtime_identity.md  tts_bridge.md
docs/en/: README.md  bilibili_gateway.md  body_service.md  configuration.md  identity_admin.md  obs_bridge.md  project_structure_and_run.md  runtime.md  runtime_identity.md  tts_bridge.md
prompts/zh-CN/: replyer.prompt
services/: __init__.py
services/bilibili_gateway/: README.md  __init__.py  app.py  config.py  connectors.py  event_builder.py  main.py  processors.py  progress.md  service.py  start_gateway.bat  stores.py  technical_real_event_flow.md
services/body_service/: README.md  app.py  config.py  debug_view.py  idle_engine.py  intent_fuser.py  main.py  models.py  progress.md  service.py  smoke.py  state_store.py
services/identity_admin/: README.md  app.py  config.py  main.py  progress.md
services/lipsync_bridge/: README.md  main.py  progress.md  service.py
services/obs_bridge/: README.md  __init__.py  app.py  config.py  main.py  progress.md  service.py  subtitle_state.py
services/tts_bridge/: README.md  __init__.py  audio_playback.py  lipsync_bridge_client.py  main.py  models.py  playback_coordinator.py  progress.md  service.py  (+4 more)
uchat/: cli.py  console_view.py  debug.py  logging_utils.py  ltmem.py  memory.py  moderation.py  output_queue.py  prompts.py
(+36 files in other folders)
